# AutoTuneNet

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  app.py  pyproject.toml  template.py
.github/workflows/: ci.yml
autotunenet_bench/: AUTOTUNENET_BENCH.md  run_all.py  run_benchmarks.py
autotunenet_bench/configs/: cifar_autotunenet.yaml  cifar_fixed_lr.yaml  loader.py  mnist_autotunenet.yaml  mnist_fixed_lr.yaml  mnist_gradient_noise.yaml  mnist_label_noise.yaml  mnist_scheduler.yaml
autotunenet_bench/controllers/: autotunenet.py  base.py  factory.py  fixed_lr.py  scheduler.py
autotunenet_bench/metrics/: compute_metrics.py  compute_regret.py  recovery.py  regret.py  stability_metrics.py
autotunenet_bench/regimes/: base.py  data_shift.py  factory.py  optimizer_noise.py
autotunenet_bench/runners/: logging_utils.py  train_runner.py
benchmarks/: BENCHMARKS.md
benchmarks/autotunenet/: run.py
benchmarks/common/: dataset.py  model.py  train_utils.py
benchmarks/final_results_graph/: plot_lr_history.py  plot_val_accuracy.py  plot_val_loss.py
benchmarks/fixed_lr/: run.py
benchmarks/offline_hpo/: run.py
benchmarks/plots/: plot_stress_test_comparison.py
benchmarks/scheduler/: run.py
benchmarks/stress_test/: run.py
docs/: CONFIGURATION.md  FAQ.md  INDEX.md  OHA.md  PYTORCH.md  QUICKSTART.md
examples/: pytorch_multiparam_test.py  pytorch_test.py
src/AutoTuneNet/: bayesian_optimizer.py
src/AutoTuneNet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/autotunenet/: bayesian_optimizer.py  factory.py  (+2 more)
tests/: optimizer_test.py
(+68 files in other folders)
