[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoTuneNet"
version = "0.1.0"
authors = [
    { name = "Mitish Raina", email = "mitishraina.dev@gmail.com"}
]
description = "A Self Optimizing Deep Neural Network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "optuna",
    "torch",
    "torchvision"
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]