[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotunenet"
version = "1.0.2"
authors = [
    { name = "Mitish Raina", email = "mitishraina.dev@gmail.com"}
]
description = "Generic Bayesian self-optimizing hyperparameter tuning engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "optuna",
    "torch",
    "torchvision",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff"
]

[project.urls]
Homepage = "https://github.com/mitishraina/AutoTuneNet"
Repository = "https://github.com/mitishraina/AutoTuneNet"
Issues = "https://github.com/mitishraina/AutoTuneNet/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*", "*_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]